<resources>
    <string name="app_name">CTMdroid</string>
    <string name="title_all">All pics</string>
    <string name="title_management">Management pics</string>
    <string name="title_unclassified">Unclassified</string>
    <string name="title_classified">Classified</string>
    <string name="title_unknown">Unknown</string>
    <string name="title_invalid">Invalid</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_create_project">Create new project</string>
    <string name="action_open_project">Open project</string>
    <string name="action_save_project">Save project</string>
    <string name="action_close_project">Close project</string>
    <string name="action_settings">Settings</string>
    <string name="exif_tag_aperture_value">Aperture value</string>
    <string name="exif_tag_artist">Artist</string>
    <string name="exif_tag_bits_per_pixel">Bits per pixel</string>
    <string name="exif_tag_bits_per_sample">Bits per sample</string>
    <string name="exif_tag_brightness_value">Brightness value</string>
    <string name="exif_tag_color_space">Color space</string>
    <string name="exif_tag_component_configuration">Component configuration</string>
    <string name="exif_tag_compression">Compression</string>
    <string name="exif_tag_contrast">Contrast</string>
    <string name="exif_tag_copyright">Copyright</string>
    <string name="exif_tag_custom_rendered">Custom rendered</string>
    <string name="exif_tag_datetime">Datetime</string>
    <string name="exif_tag_datetime_digitized">Datetime digitized</string>
    <string name="exif_tag_datetime_original">Datetime original</string>
    <string name="exif_tag_distance_range">Distance range</string>
    <string name="exif_tag_exif_version">Exif version</string>
    <string name="exif_tag_exposure_bias_value">Exposure bias value</string>
    <string name="exif_tag_exposure_index">Exposure index</string>
    <string name="exif_tag_exposure_mode">Exposure mode</string>
    <string name="exif_tag_exposure_program">Exposure program</string>
    <string name="exif_tag_exposure_time">Exposure time</string>
    <string name="exif_tag_flash_energy">Flash energy</string>
    <string name="exif_tag_flash">Flash</string>
    <string name="exif_tag_flashpix_version">Flashpix version</string>
    <string name="exif_tag_fnumber">FNumber</string>
    <string name="exif_tag_focal_length_35mm">Focal length 35mm</string>
    <string name="exif_tag_focal_length">Focal length</string>
    <string name="exif_tag_focal_plane_resolution_unit">Focal plane resolution unit</string>
    <string name="exif_tag_focal_plane_x_resolution">Focal plane X resolution</string>
    <string name="exif_tag_focal_plane_y_resolution">Focal plane Y resolution</string>
    <string name="exif_tag_gain_control">Gain control</string>
    <string name="exif_tag_gps_altitude">GPS altitude</string>
    <string name="exif_tag_gps_altitude_ref">GPS altitude ref</string>
    <string name="exif_tag_gps_area_information">GPS area information</string>
    <string name="exif_tag_gps_date_stamp">GPS date stamp</string>
    <string name="exif_tag_gps_dest_bearing">GPS dest bearing</string>
    <string name="exif_tag_gps_dest_bearing_ref">GPS dest bearing ref</string>
    <string name="exif_tag_gps_dest_distance">GPS dest distance</string>
    <string name="exif_tag_gps_dest_distance_ref">GPS dest distance ref</string>
    <string name="exif_tag_gps_dest_latitude">GPS dest latitude</string>
    <string name="exif_tag_gps_dest_latitude_ref">GPS dest latitude ref</string>
    <string name="exif_tag_gps_dest_longitude">GPS dest longitude</string>
    <string name="exif_tag_gps_dest_longitude_ref">GPS dest longitude ref</string>
    <string name="exif_tag_gps_differential">GPS differential</string>
    <string name="exif_tag_gps_gpsdop">GPS GPSDOP</string>
    <string name="exif_tag_gps_latitude">GPS latitude</string>
    <string name="exif_tag_gps_latitude_ref">GPS latitude ref</string>
    <string name="exif_tag_gps_longitude">GPS longitude</string>
    <string name="exif_tag_gps_longitude_ref">GPS longitude ref</string>
    <string name="exif_tag_gps_map_datum">GPS map datum</string>
    <string name="exif_tag_gps_measure_mode">GPS measure mode</string>
    <string name="exif_tag_gps_processing_method">GPS processing method</string>
    <string name="exif_tag_gps_satelites">GPS satellites</string>
    <string name="exif_tag_gps_slmg_direction">GPS Slmg direction</string>
    <string name="exif_tag_gps_slmg_direction_ref">GPS slmg direction ref</string>
    <string name="exif_tag_gps_speed">GPS speed</string>
    <string name="exif_tag_gps_speed_ref">GPS speed ref</string>
    <string name="exif_tag_gps_status">GPS status</string>
    <string name="exif_tag_gps_timestamp">GPS timestamp</string>
    <string name="exif_tag_gps_track">GPS track</string>
    <string name="exif_tag_gps_track_ref">GPS track ref</string>
    <string name="exif_tag_gps_version_id">GPS Version ID</string>
    <string name="exif_tag_height">Height</string>
    <string name="exif_tag_image_description">Image description</string>
    <string name="exif_tag_iso_speed_ratings">ISO speed ratings</string>
    <string name="exif_tag_jpeg_interchange_format">JPEG intechange format</string>
    <string name="exif_tag_jpeg_interchange_format_length">JPEG intechange format length</string>
    <string name="exif_tag_light_source">Light Source</string>
    <string name="exif_tag_make">Make</string>
    <string name="exif_tag_marker_note">Marker note</string>
    <string name="exif_tag_max_aperture_value">Max aperture value</string>
    <string name="exif_tag_metering_mode">Metering mode</string>
    <string name="exif_tag_model">Model</string>
    <string name="exif_tag_orientation">Orientation</string>
    <string name="exif_tag_photometric_interpretation">Photometric interpretation</string>
    <string name="exif_tag_pixel_xdimension">Pixel X-dimension</string>
    <string name="exif_tag_pixel_ydimension">Pixel Y-dimension</string>
    <string name="exif_tag_planar_configuration">Planar configuration</string>
    <string name="exif_tag_primary_chromaticities">Primary chromaticities</string>
    <string name="exif_tag_reference_black_white">Rows per strip</string>
    <string name="exif_tag_related_audio_file">Related audio file</string>
    <string name="exif_tag_resolution_unit">Resolution unit</string>
    <string name="exif_tag_rows_per_strip">Rows per strip</string>
    <string name="exif_tag_samples_per_pixel">Samples per pixel</string>
    <string name="exif_tag_saturation">Saturation</string>
    <string name="exif_tag_screen_capture_type">Screen capture mode</string>
    <string name="exif_tag_sensing_method">Sensing method</string>
    <string name="exif_tag_sharpness">Sharpness</string>
    <string name="exif_tag_shooter_speed_value">Shooter speed value</string>
    <string name="exif_tag_software">Software</string>
    <string name="exif_tag_spectral_sensitivity">Spectral sensitivity</string>
    <string name="exif_tag_strip_byte_counts">Strip byte counts</string>
    <string name="exif_tag_strip_offsets">Strip offsets</string>
    <string name="exif_tag_subject_area">Subject area</string>
    <string name="exif_tag_subject_distance">Subject distance</string>
    <string name="exif_tag_subject_location">Subject location</string>
    <string name="exif_tag_transfer_function">Transfer function</string>
    <string name="exif_tag_unique_id">Unique ID</string>
    <string name="exif_tag_user_comment">User comment</string>
    <string name="exif_tag_white_balance">White balance</string>
    <string name="exif_tag_white_point">White point</string>
    <string name="exif_tag_width">Width</string>
    <string name="exif_tag_xresolution">X resolution</string>
    <string name="exif_tag_ycbcr_coeficients">YCbCr coeficients</string>
    <string name="exif_tag_ycbcr_positioning">YCbCr positioning</string>
    <string name="exif_tag_ycbcr_subsampling">YCbCr subsampling</string>
    <string name="exif_tag_yresolution">Y resolution</string>
    <string name="exif_tag_zoom_ratio">Zoom ratio</string>
    <string name="exif_value_above_sea_level">Above sea level</string>
    <string name="exif_value_action">Action</string>
    <string name="exif_value_aperture_priority">Aperture priority</string>
    <string name="exif_value_assumed">assumed</string>
    <string name="exif_value_author">Author</string>
    <string name="exif_value_auto">Auto</string>
    <string name="exif_value_auto_bracket">Auto bracket</string>
    <string name="exif_value_auto_exposure">Auto exposure</string>
    <string name="exif_value_average">Average</string>
    <string name="exif_value_below_sea_level">Below sea level</string>
    <string name="exif_value_centered">Centered</string>
    <string name="exif_value_center_weighted_average">Center weighted average</string>
    <string name="exif_value_centimeters">Centimeters</string>
    <string name="exif_value_chunky">Chunky format</string>
    <string name="exif_value_close_view">Close view</string>
    <string name="exif_value_cloudy_weather">Cloudy weather</string>
    <string name="exif_value_compulsory_finning">Compulsory flash firing</string>
    <string name="exif_value_compulsory_suppression">Compulsory flash suppression</string>
    <string name="exif_value_cool_white_fluorescent">Cool white fluorescent</string>
    <string name="exif_value_co_sited">Co-sited</string>
    <string name="exif_value_creative">Creative</string>
    <string name="exif_value_datetime_format_exif">yyyy:mm:dd HH:mm:ss</string>
    <string name="exif_value_datetime_format">yyyy.mm.dd HH:mm:ss z</string>
    <string name="exif_value_daylight">Daylight</string>
    <string name="exif_value_daylight_fluorescent">Daylight fluorescent</string>
    <string name="exif_value_day_white_fluorescent">Day white fluorescent</string>
    <string name="exif_value_differential_correction_used">Differential correction used</string>
    <string name="exif_value_distant_view">Distant view</string>
    <string name="exif_value_editor">Editor</string>
    <string name="exif_value_fine_weather">Fine weather</string>
    <string name="exif_value_flash_did_not_fire">Did not fire</string>
    <string name="exif_value_flash_fired">Fired</string>
    <string name="exif_value_flash">Flash</string>
    <string name="exif_value_flash_not_present">Flash not present</string>
    <string name="exif_value_flash_present">Flash present</string>
    <string name="exif_value_flip_horizontal">Flip horizontal</string>
    <string name="exif_value_flip_vertical">Flip vertical</string>
    <string name="exif_value_fluorescent">Fluorescent</string>
    <string name="exif_value_hard">Hard</string>
    <string name="exif_value_high_down">High gain down</string>
    <string name="exif_value_high">High</string>
    <string name="exif_value_high_up">high gain up</string>
    <string name="exif_value_inches">Inches</string>
    <string name="exif_value_infinity">∞</string>
    <string name="exif_value_iso_studio_tungsten">ISO studio tungsten</string>
    <string name="exif_value_kilometers">Kilometers</string>
    <string name="exif_value_kilometers_per_hour">Kilometers per hour</string>
    <string name="exif_value_knots">Knots</string>
    <string name="exif_value_landscape">Landscape</string>
    <string name="exif_value_low_down">Low gain down</string>
    <string name="exif_value_low">Low</string>
    <string name="exif_value_low_up">Low gain up</string>
    <string name="exif_value_macro">Macro</string>
    <string name="exif_value_magnetic_direction">Magnetic direction</string>
    <string name="exif_value_manual_exposure">Manual exposure</string>
    <string name="exif_value_manual">manual</string>
    <string name="exif_value_miles">Miles</string>
</resources>