<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_create_project" android:title="@string/action_create_project"
        android:showAsAction="withText|ifRoom" />

    <item android:id="@+id/action_open_project" android:title="@string/action_open_project"
        android:showAsAction="withText|ifRoom" />

    <item android:id="@+id/action_save_project" android:title="@string/action_save_project"
        android:showAsAction="withText|ifRoom" />

    <item android:id="@+id/action_close_project" android:title="@string/action_close_project"
        android:showAsAction="withText|ifRoom" />

    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" android:showAsAction="never" />
</menu>
